sort.basic.shell.AlgShellSort.scala.error
Compilation error:
AlgShellSort:3: error: not found: value len
  var gap=len/2
          ^