sort.basic.shell.AlgShellSort.scala.code
def shellSort()  {
  var gap=len/2
  while (gap>0) {
    
  }
}